// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $ 2.35
     
  </h1>
</div>
`;

exports[`should render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    12
     
    expenses
     totalling 
    $ 202.35
     
  </h1>
</div>
`;
